# autoaim_research

./: .gitignore  .gitmodules  README.md
docs/arch/Climber_Vision_26/code/: CMakeLists.txt
docs/arch/Climber_Vision_26/code/calibration/: calibrate_camera.cpp  calibrate_handeye.cpp  calibrate_usb_camera.cpp  capture.cpp  serial_delay.cpp  split_video.cpp
docs/arch/Climber_Vision_26/code/io/: CMakeLists.txt  camera.cpp  cboard.cpp  cboard.hpp
docs/arch/Climber_Vision_26/code/io/gimbal/: gimbal.cpp  gimbal.hpp
docs/arch/Climber_Vision_26/code/io/hikrobot/: hikrobot.cpp  hikrobot.hpp
docs/arch/Climber_Vision_26/code/io/usbcamera/: usbcamera.cpp  usbcamera.hpp
docs/arch/Climber_Vision_26/code/scripts/: adjust_gimbal_offset.py  auto_start.sh  perception_camera_manager.py
docs/arch/Climber_Vision_26/code/src/: infantry.cpp  sentry.cpp  sentry_aim.cpp  sentry_debug.cpp  standard.cpp  uav.cpp
docs/arch/Climber_Vision_26/code/tasks/auto_aim/: CMakeLists.txt  aimer.cpp  aimer.hpp  solver.cpp  solver.hpp  target.cpp  target.hpp  tracker.cpp  tracker.hpp
docs/arch/Climber_Vision_26/code/tasks/auto_aim/planner/: planner.cpp  planner.hpp
docs/arch/Climber_Vision_26/code/tasks/auto_aim/yolos/: yolo11.cpp  yolov5.cpp  yolov8.cpp  yolov8.hpp
docs/arch/Climber_Vision_26/code/tasks/auto_buff/: CMakeLists.txt  buff_aimer.cpp  buff_aimer.hpp  buff_big_group.cpp  buff_big_group.hpp  buff_detector.cpp  buff_detector.hpp  buff_solver.cpp  buff_solver.hpp  buff_target.cpp  buff_target.hpp  buff_type.cpp  buff_type.hpp  yolo11_buff.cpp  yolo11_buff.hpp
docs/arch/Climber_Vision_26/code/tasks/omniperception/: CMakeLists.txt  armor_selector.cpp  armor_selector.hpp  debug_view.cpp  debug_view.hpp  decider.cpp  decider.hpp  detection.hpp  perceptron.cpp  perceptron.hpp
docs/arch/Climber_Vision_26/code/tools/: CMakeLists.txt  air_resist_trajectory.cpp  air_resist_trajectory.hpp  frame_source.cpp  frame_source.hpp  recorder.cpp  replay_reader.cpp  replay_reader.hpp  replay_utils.cpp  replay_utils.hpp  stats.cpp  stats.hpp  thread_safe_queue.hpp
docs/arch/SHtech_auto_aim/code/: CMakeLists.txt  README.md  build.sh  install_service.py  main.cpp  main.hpp
docs/arch/SHtech_auto_aim/code/bash/: auto-aim-stop.sh
docs/arch/SHtech_auto_aim/code/common/: common.hpp  datatype.hpp  message_bridge.hpp  module_config.hpp  pipeline.hpp
docs/arch/SHtech_auto_aim/code/common/cmd_parser/: cmd_parser.cpp  cmd_parser.hpp
docs/arch/SHtech_auto_aim/code/common/log/: log.hpp
docs/arch/SHtech_auto_aim/code/detect/: CMakeLists.txt  armor_corner_optimizer.cpp  armor_corner_optimizer.hpp  backend.hpp  corner_refine_submodule.cpp  corner_refine_submodule.hpp  detect_submodule.cpp  detect_submodule.hpp  preprocess_submodule.cpp  preprocess_submodule.hpp
docs/arch/SHtech_auto_aim/code/detect/AXCL/: AXCL.cpp  AXCL.hpp
docs/arch/SHtech_auto_aim/code/detect/ONNX/: ONNX.cpp  ONNX.hpp
docs/arch/SHtech_auto_aim/code/detect/TensorRT/: TRTModule.cpp  TRTModule.hpp
docs/arch/SHtech_auto_aim/code/entrystage/: CMakeLists.txt  entryStage_submodule.cpp  entryStage_submodule.hpp
docs/arch/SHtech_auto_aim/code/mathutils/: CMakeLists.txt  CoordTransformer.cpp  CoordTransformer.hpp  ExtendedKalman.hpp  IESEKF.hpp  IESEKF_Double_Armor.hpp  Kalman.hpp  math_tools.hpp
docs/arch/SHtech_auto_aim/code/planner/: CMakeLists.txt  Planner.cpp  Planner.hpp  planner_submodule.cpp  planner_submodule.hpp
docs/arch/SHtech_auto_aim/code/predict/: CMakeLists.txt  MultiPolicyPredictor_submodule.cpp  MultiPolicyPredictor_submodule.hpp  Tracker.cpp  Tracker.hpp
docs/arch/SHtech_auto_aim/code/sensor/: CMakeLists.txt  cam_wrapper.hpp  sensor_submodule.cpp  sensor_submodule.hpp
docs/arch/SHtech_auto_aim/code/sensor/hikcam/: hikcam_wrapper.cpp  hikcam_wrapper.hpp
docs/arch/SHtech_auto_aim/code/sensor/video/: video_wrapper.cpp  video_wrapper.hpp
docs/arch/SHtech_auto_aim/code/timedserial/: CMakeLists.txt  serial_interface.hpp  timed_serial.cpp  timed_serial.hpp
docs/arch/SHtech_auto_aim/code/timedserial/UartIMU/: mock_driver.hpp  packet.hpp  uart_driver.cpp  uart_driver.hpp
docs/arch/robomaster-cv/code/ros_ws/src/detection/: CMakeLists.txt
docs/arch/robomaster-cv/code/ros_ws/src/monitor/: package.xml
docs/arch/robomaster-cv/code/ros_ws/src/polystar_msgs/: package.xml
docs/arch/robomaster-cv/code/ros_ws/src/testing/: CMakeLists.txt
docs/arch/robomaster-cv/ros_ws/src/decision/: CMakeLists.txt  package.xml
docs/arch/robomaster-cv/ros_ws/src/decision/launch/: publisher_launch.py  weighted_tracker_launch.py
docs/arch/robomaster-cv/ros_ws/src/decision/scripts/: control.py  shooting.py
docs/arch/robomaster-cv/ros_ws/src/decision/src/: bounding_box.cpp  bounding_box.h  publisher.cpp  simple_tracker.cpp  tracker.cpp  tracker.h  weighted_tracker.cpp
docs/arch/robomaster-cv/ros_ws/src/detection/: package.xml
docs/arch/robomaster-cv/ros_ws/src/detection/include/: deepstream_detector.hpp
docs/arch/robomaster-cv/ros_ws/src/detection/launch/: detection_launch.py
docs/arch/robomaster-cv/ros_ws/src/detection/src/: detector.cpp
docs/arch/robomaster-cv/ros_ws/src/locate/: CMakeLists.txt  package.xml
docs/arch/robomaster-cv/ros_ws/src/locate/include/: imu.hpp  odom.hpp  turret.hpp
docs/arch/robomaster-cv/ros_ws/src/locate/launch/: locate_launch.py  mock_launch.py
docs/arch/robomaster-cv/ros_ws/src/locate/src/: imu.cpp  turret.cpp
docs/arch/robomaster-cv/ros_ws/src/monitor/: CMakeLists.txt
docs/arch/robomaster-cv/ros_ws/src/monitor/include/: video_monitor.hpp
docs/arch/robomaster-cv/ros_ws/src/monitor/src/: monitor_logger.cpp  monitor_video_node.cpp  video_monitor.cpp
docs/arch/robomaster-cv/ros_ws/src/polystar_msgs/: CMakeLists.txt
docs/arch/robomaster-cv/ros_ws/src/polystar_msgs/msg/: GameStage.msg  GameStatus.msg  PositionFeedback.msg  Shoot.msg  SwitchOrder.msg  Target.msg  TurretFeedback.msg
docs/arch/robomaster-cv/ros_ws/src/serial/: CMakeLists.txt  package.xml
docs/arch/robomaster-cv/ros_ws/src/testing/: package.xml
docs/arch/robomaster-cv/ros_ws/src/tracking/: package.xml
(+159 files in other folders)
