<?xml version="1.0"?>
<package format="2">
  <name>decision</name>
  <version>0.1.0</version>
  <description>Targeting system decision</description>

  <maintainer email="thomas.petrie@etud.polymtl.ca">Thomas Petrie</maintainer>

  <license>MIT</license>

  <author email="sebastien.darche@polymtl.ca">Sébastien Darche</author>

  <buildtool_depend>ament_cmake_ros</buildtool_depend>
  
  <depend>rclcpp</depend>

  <build_depend>detection</build_depend>
  <build_depend>polystar_msgs</build_depend>
  <build_depend>tracking</build_depend>
  <build_depend>tf2</build_depend>
  <build_depend>tf2_ros</build_depend>
  <build_depend>tf2_geometry_msgs</build_depend>
  <build_depend>OpenCV</build_depend>

  <exec_depend>detection</exec_depend>
  <exec_depend>polystar_msgs</exec_depend>
  <exec_depend>tracking</exec_depend>
  <exec_depend>tf2</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>tf2_geometry_msgs</exec_depend>
  <exec_depend>OpenCV</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>

</package>
