<?xml version="1.0"?>
<package format="2">
  <name>locate</name>
  <version>0.0.0</version>
  <description>Transform serial messages to ROS standard messages</description>

  <maintainer email="sebastien@todo.todo">sebastien</maintainer>


  <license>MIT</license>

  <buildtool_depend>ament_cmake_ros</buildtool_depend>
  
  <depend>rclcpp</depend>
  <depend>nav_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>polystar_msgs</depend>
  <depend>geometry_msgs</depend>

  <build_depend>tf2</build_depend>
  <build_depend>tf2_ros</build_depend>

  <exec_depend>tf2</exec_depend>
  <exec_depend>tf2_ros</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>

</package>
