<?xml version="1.0"?>
<package format="2">
  <name>tracking</name>
  <version>0.1.0</version>
  <description>Bounding box tracking</description>

  <maintainer email="thomas.petrie@etud.polymtl.ca">Sébastien Darche</maintainer>

  <license>MIT</license>

  <author email="sebastien.darche@polymtl.ca">Sébastien Darche</author>

  <buildtool_depend>ament_python</buildtool_depend>

  <depend>rclpy</depend>
  <depend>detection</depend>

  <build_depend>rosidl_default_generators</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>

  <exec_depend>rosidl_default_runtime</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>

  <member_of_group>rosidl_interface_packages</member_of_group>
  
  <export>
    <build_type>ament_python</build_type>
  </export>

</package>
