<?xml version="1.0"?>
<package format="3">
  <name>polystar_msgs</name>
  <version>0.1.0</version>
  <description>Messages for serial package</description>

  <maintainer email="thomas.petrie@polymtl.ca">Thomas Petrie</maintainer>

  <license>MIT</license>

  <author email="sebastien.darche@polymtl.ca">Sébastien Darche</author>

  <depend>std_msgs</depend>
  <depend>builtin_interfaces</depend>

  <build_depend>rosidl_default_generators</build_depend>

  <exec_depend>rosidl_default_runtime</exec_depend>

  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>

</package>
